{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 3209,
  "lineage": "409d6893-3f47-9ffa-f20b-a25d00d71134",
  "resources": [
    {
      "module": "module.dns.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:590183870076:instance/i-03cd77c2ca9dec463",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cd77c2ca9dec463",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-issac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0319c689eb44b8b90",
            "private_dns": "ip-10-10-0-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.53",
            "public_ip": "100.27.27.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035471f9355a31fce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053e758728144e380",
            "tags": {
              "Name": "instance-1",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "instance-1",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd9c8ac2e4298cc"
            ]
          },
          "dependencies": [
            "module.dns.module.ec2.data.aws_key_pair.existing_key_pair",
            "module.dns.module.ec2.module.vpc.aws_security_group.vpc_security_group",
            "module.dns.module.ec2.module.vpc.aws_subnet.subnet_public",
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:590183870076:instance/i-0da3e05064b877e12",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da3e05064b877e12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair-issac",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd7b7c377b529b7d",
            "private_dns": "ip-10-10-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.10",
            "public_ip": "3.90.36.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016ae666031e59f22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067a4c9466a24ccc3",
            "tags": {
              "Name": "instance-2",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "instance-2",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd9c8ac2e4298cc"
            ]
          },
          "dependencies": [
            "module.dns.module.ec2.data.aws_key_pair.existing_key_pair",
            "module.dns.module.ec2.module.vpc.aws_security_group.vpc_security_group",
            "module.dns.module.ec2.module.vpc.aws_subnet.subnet_public",
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:internet-gateway/igw-022c89eb4f016bc0b",
            "id": "igw-022c89eb4f016bc0b",
            "owner_id": "590183870076",
            "tags": {
              "Name": "ig-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "ig-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "vpc_id": "vpc-023dd08042414776c"
          },
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:route-table/rtb-0bfa735b8f981badd",
            "id": "rtb-0bfa735b8f981badd",
            "owner_id": "590183870076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022c89eb4f016bc0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "rt-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "timeouts": null,
            "vpc_id": "vpc-023dd08042414776c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_crta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24404c96677e1d0",
            "route_table_id": "rtb-0bfa735b8f981badd",
            "subnet_id": "subnet-053e758728144e380"
          },
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.dns.module.ec2.module.vpc.aws_route_table.vpc_route_table",
            "module.dns.module.ec2.module.vpc.aws_subnet.subnet_public",
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706a29056349cf8b",
            "route_table_id": "rtb-0bfa735b8f981badd",
            "subnet_id": "subnet-067a4c9466a24ccc3"
          },
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.dns.module.ec2.module.vpc.aws_route_table.vpc_route_table",
            "module.dns.module.ec2.module.vpc.aws_subnet.subnet_public",
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:security-group/sg-0dbd9c8ac2e4298cc",
            "description": "grupo de seguridad para la instancia de devops prueba",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbd9c8ac2e4298cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grupo-seguridad-devops",
            "name_prefix": "",
            "owner_id": "590183870076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "sg-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "timeouts": null,
            "vpc_id": "vpc-023dd08042414776c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:subnet/subnet-053e758728144e380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053e758728144e380",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183870076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "subnet-1",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "vpc_id": "vpc-023dd08042414776c"
          },
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:subnet/subnet-067a4c9466a24ccc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a4c9466a24ccc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183870076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "subnet-2",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "vpc_id": "vpc-023dd08042414776c"
          },
          "dependencies": [
            "module.dns.module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dns.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183870076:vpc/vpc-023dd08042414776c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0599ba852df1b4cba",
            "default_route_table_id": "rtb-04fab9886e1577c7c",
            "default_security_group_id": "sg-0a398b433d279c783",
            "dhcp_options_id": "dopt-0214340a736c5ba10",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023dd08042414776c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fab9886e1577c7c",
            "owner_id": "590183870076",
            "tags": {
              "Name": "vpc-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            },
            "tags_all": {
              "Name": "vpc-devops",
              "tags_all": "{\"environment\":\"dev\",\"project\":\"devops_prueba\",\"version\":\"1.0.0\"}"
            }
          }
        }
      ]
    }
  ]
}